test.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-hello-world
    spec:
      containers:
      - name: hello-world
        image: gcr.io/tvlk-realtime-tokyo-test/test:v1
        ports:
          - containerPort: 8080
