container-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp-hello-world
spec:
  ports:
  - port: 443
    protocol: TCP
    name: https
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: esp-hello-world
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-hello-world
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: nginx-ssl
          secret:
            secretName: nginx-ssl
      containers:
      # [START esp]
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "-p", "8082",
          "-S", "443",
          "-a", "127.0.0.1:8080",
          "-s", "esp-hello-world.endpoints.tvlk-data-dev-179204.cloud.goog",
          "-v", "2017-09-07r3",
        ]
      # [END esp]
        ports:
          - containerPort: 8082
          - containerPort: 443
        volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: nginx-ssl
            readOnly: true
          - mountPath: /etc/nginx/custom
            name: nginx-config
            readOnly: true
      - name: hello-world
        image: gcr.io/tvlk-data-dev-179204/test:v2
        ports:
          - containerPort: 8080
